--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,14 @@ body {
     font-size: 15px;
 }
 
-h1, h2, h3 {
+h1, h2 {
     margin: 0 0 20px;
-    
+
+}
+
+h3,h4,h5,h6 {
+    font-size: 30px;
+    margin: 20px 0px; /* Отступы сверху/снизу — 0, слева/справа — 0 */
 }
 
 a {
